# fx-technical-summary-pipeline

./: .env.example  .gitignore  LICENSE  README.md  consolidate_summaries.py  main.py  ohlc_aggregator.py  pyproject.toml  requirements.txt
.github/workflows/: daily_ohlc_analysis.yml
data/2025/12/18/summaries/: AUDJPY_summary.json  AUDUSD_summary.json  EURJPY_summary.json  EURUSD_summary.json  USDJPY_summary.json  XAUUSD_summary.json
scripts/: fetch_daily_data_local.py  generate_eval_summary.py  prepare_daily_data.py
src/fx_kline/analyst/: data_manager.py
src/fx_kline/core/: __init__.py  business_days.py  data_fetcher.py  models.py  ohlc_aggregator.py  regime_utils.py  summary_consolidator.py  timezone_utils.py  validators.py
